<resources>
    <string name="app_name">WeChat</string>
    <string name="action_search">search</string>
    <string name="action_group_chat">group chat</string>
    <string name="action_addcontacts">Add Contacts</string>
    <string name="action_scan_qr">Scan QR Code</string>
    <string name="action_payment">Payment &#038; Receipt</string>
    <string name="action_help">Help &#038; Feedback</string>

    <string name="title_child_pic">ChildPictureFragment</string>
    <string name="title_child_gallery">ChildPictureGallery</string>


    <string name="tab_chat">Chats</string>
    <string name="tab_Contacts">Contacts</string>
    <string name="tab_Discover">Discover</string>
    <string name="tab_Me">Me</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="dialog_normal_message">this is message in normal dialog</string>
    <string name="dialog_progress_message">this is message in progress dialog</string>
    <string name="dialog_normal_title">Title</string>
    <string name="dialog_counter_message">this is message in counter dialog,the count is %s</string>


    <string name="button_str_ok">OK</string>
    <string name="button_str_cancel">CANCEL</string>

</resources>
