<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/action_group_chat"
        android:orderInCategory="100"
        android:title="@string/action_group_chat"
        android:icon="@drawable/ic_group_black_24dp"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_add_contacts"
        android:orderInCategory="100"
        android:title="@string/action_group_chat"
        android:icon="@drawable/ic_person_add_black_24dp"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_scan_qr"
        android:orderInCategory="100"
        android:title="@string/action_scan_qr"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_payment"
        android:orderInCategory="100"
        android:title="@string/action_group_chat"
        android:icon="@drawable/ic_group_black_24dp"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="never|withText" />

</menu>
