<?xml version="1.0" encoding="utf-8"?><!-- This DrawerLayout has two children at the root  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/DialogTheme"
    android:padding="20dp"
    >


    <TextView
        android:id="@+id/dialog_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_normal_title"
        android:layout_centerInParent="true"
        android:textColor="@android:color/holo_blue_bright" />


    <TextView
        android:id="@+id/dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_normal_message"
        android:layout_below="@+id/dialog_title_tv"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:id="@+id/dialog_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        >
        <TextView
            android:id="@+id/ok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/button_str_ok"
            style="@style/button_text_green"
            />
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/button_str_cancel"
            style="@style/button_text_green"
            />

    </LinearLayout>

</RelativeLayout>